# Ngine5

./: .gitignore
docs/: BlackBerry10 build and sign.txt  CurrentSettings.vssettings  CurrentSettings_vs2013.vssettings  Engine Solution creation.txt  FBX settings for exporting.txt  Game Momentics project set up.txt  HOWTO Errors.txt  Ngine4_defaults.vssettings  Ngine4_defaults_vs2013.vssettings  Ngine_defaults_vs2015.vssettings  Projection_Matrix_DEFINITIVE_EXPLANATION_FROM_OCULUS.txt  TextureFormats.xlsx  axis.txt  codingStandard.txt  directories.txt  tempScripts.bat  workEnvironment.txt
docs/Creating New Project/: configuration.txt
middleware/GLES3/include/: gl3.h
middleware/Vulkan/: vulkan.h
middleware/zlib-1.2.10/contrib/masmx64/: gvmat64.lst  inffasx64.lst
middleware/zlib-1.2.10/contrib/masmx86/: inffas32.lst  match686.lst
middleware/zlib-1.2.8/contrib/masmx64/: gvmat64.lst  inffasx64.lst
middleware/zlib-1.2.8/contrib/masmx86/: inffas32.lst  match686.lst
project/: Info.plist  Ngine5.sln  Ngine5.vcxproj  Ngine5.vcxproj.filters  Ngine_post_build.bat  Ngine_post_build_debug.bat  Ngine_pre_build_debug.command  Ngine_sync_Vulkan.bat  Ngine_sync_Vulkan.command
project/Ngine.xcodeproj/: project.pbxproj
project/Ngine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
project/Ngine.xcodeproj/project.xcworkspace/xcshareddata/: Ngine.xccheckout
public/assets/shaders/: enAxes.glsl.1.10.fs  enAxes.glsl.1.10.vs  enAxes.glsl.1.40.fs  enAxes.glsl.1.40.vs  enOpenVR.glsl.4.10.fs  enOpenVR.glsl.4.10.vs
public/assets/shaders/temp/: default.glsl.1.10.fs  default.glsl.1.10.vs  latency.glsl.1.10.fs  latency.glsl.1.10.vs  oculus3.glsl.1.10.vs  oculus3win8wa.glsl.1.10.fs  oculus3win8wa.glsl.1.10.vs  openvr.glsl.4.10.fs  openvr.glsl.4.10.vs
public/docs/: NewProject.txt
public/include/: Ngine.h  threading.h
public/include/audio/: audio.h
public/include/core/: defines.h  storage.h  types.h
public/include/core/algorithm/: allocator.h  hash.h
public/include/core/config/: config.h
public/include/core/log/: log.h  log.inl
public/include/core/xr/: pose.h  (+7 more)
public/include/input/: hmd.h  input.h  keyboard.h
public/include/memory/: circularQueue.h  workStealingDeque.h
public/include/monetization/: monetization.h
public/include/parallel/: scheduler.h  sharedAtomic.h  task.h
public/include/platform/: system.h
public/include/rendering/: renderer.h  stereo.h  streamer.h
public/include/resources/: bmp.h  dds.h  effect.h  exr.h  fbx.h  font.h  forsyth.h  hdr.h  interface.h  material.h  mtl.h  obj.h  png.h  resources.h  tga.h  wav.h  zip.h
public/include/scene/: Ncam.h  Noriented.h  axes.h  cam.h  drawable.h  entity.h  frustum.h  scene.h  state.h
public/include/threading/: Nqueue.h  Ntls.h  maintask.h  mutex.h  mutex.inl  scheduler.h  semaphore.h  task.h  thread.h  threading.inl  worker.h
public/include/utilities/: Nversion.h  Tcontainer.h  circularQueue.h  osxStrings.h  random.h  strings.h  timer.h  utilities.h
public/scripts/: newProject.cmd  newProject.command  newProject.ps1
public/scripts/project/: .gitignore  CMakeLists.txt  generateProjectForVisualStudio2015.bat  generateProjectForVisualStudio2017.bat  generateProjectForVisualStudio2019.bat  generateProjectForXcode.command  main.cpp  patchProject.ps1  postBuild.bat
src/audio/: audio.cpp  context.h
src/core/: configuration.h
src/core/algorithm/: hash.cpp
src/core/config/: config.cpp  context.h
src/core/input/: winEvents.cpp  winInput.cpp  winInput.h  winJoystick.cpp  winJoystick.h
src/core/log/: PrintLog.cpp  PrintLog.h  StreamLog.cpp  StreamLog.h  andLog.cpp  andLog.h  context.h  log.cpp
src/core/memory/: pageAllocator.cpp
src/core/parallel/: fiber.h  parallel.cpp  parallel.h  psxFiber.cpp  psxFiber.h  psxMutex.cpp  psxThread.cpp  psxThread.h  winFiber.cpp  winFiber.h  winMutex.cpp  winThread.cpp  winThread.h
src/core/rendering/: api.cpp  buffer.cpp  context.h  depthStencil.cpp  framebuffer.cpp  gpu.cpp  ogl_buffer.cpp  osxSurface.h  osxSurface.mm  program.cpp  raster.cpp  rendering.cpp  sampler.cpp  screen.cpp  state.cpp  texture.cpp
src/core/storage/: andStorage.cpp  andStorage.h  bbStorage.cpp  bbStorage.h  context.h  osxStorage.h  osxStorage.mm  osxStorageFile.h  storage.cpp  storage.h  winStorage.cpp  winStorage.h
src/core/types/: double3.cpp  double4.cpp  float2.cpp  float3.cpp  float3x3.cpp  float3x4.cpp  float4.cpp  float4x4.cpp  half.cpp  quaternion.cpp  sint16v2.cpp  sint32v4.cpp  uint128.cpp  uint16v2.cpp  uint16v4.cpp  uint32v2.cpp  uint32v3.cpp  uint32v4.cpp
src/core/utilities/: basicAllocator.cpp  basicAllocator.h  pageAllocator.cpp  parser.cpp
src/input/: andInput.cpp  andInput.h  bbInput.cpp  bbInput.h  camera.cpp  common.h  context.h  hmd.cpp  input.cpp  joystick.cpp  oculus.cpp  oculus.h  osxInput.h  osxInput.mm  vive.cpp  vive.h  winInput.cpp  winInput.h  winJoystick.cpp  winJoystick.h
src/monetization/: context.h  monetization.cpp
src/parallel/: comScheduler.h  scheduler.cpp  scheduler.h
src/platform/: comMain.cpp  comMain.h  context.h  system.cpp
src/platform/android/: and_events.cpp  and_main.cpp
src/platform/blackberry/: bb_main.cpp
src/platform/macos/: mac_callbacks.m  mac_main.m
src/platform/osx/: AppDelegate.h  AppDelegate.m  AppDelegate.mm  macMain.mm  mac_main.m  osx_callbacks.m  osx_callbacks.mm  osx_main.m  osx_main.mm
src/platform/windows/: winMain.cpp  win_events.cpp  win_main.cpp
src/rendering/: Istate.cpp  stereo.cpp  streamer.cpp
src/resources/: bmp.cpp  common.h  context.h  dds.cpp  effect.cpp  exr.cpp  fbx.cpp  font.cpp  forsyth.cpp  hdr.cpp  material.cpp  model.cpp  mtl.cpp  obj.cpp  png.cpp  resources.cpp  tex.cpp  tga.cpp  wav.cpp
src/scene/: Ncam.cpp  Noriented.cpp  axes.cpp  cam.cpp  context.h  drawable.cpp  entity.cpp  frustum.cpp  gamestate.cpp  scene.cpp
src/threading/: context.h  maintask.cpp  mutex.cpp  sheduler.cpp  task.cpp  thread.cpp  tls.cpp  worker.cpp
src/utilities/: osxStrings.mm  random.cpp  strings.cpp  timer.cpp  utilities.cpp
src/utilities/gpcpu/: gpcpu.cpp
tools/: external tools.txt
(+499 files in other folders)
